logs/gpym.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GPyM'...
Listing './lib/python3.5/site-packages/GPyM/GPyM.egg-info'...
Compiling './lib/python3.5/site-packages/GPyM/__main__.py'...
***   File "./lib/python3.5/site-packages/GPyM/__main__.py", line 28
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/GPyM/alien'...
Compiling './lib/python3.5/site-packages/GPyM/alien/GridCoordinates.py'...
***   File "./lib/python3.5/site-packages/GPyM/alien/GridCoordinates.py", line 37
    print most_frq_val_Y1, most_frq_val_Y0
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GPyM/alien/LOGGER.py'...
***   File "./lib/python3.5/site-packages/GPyM/alien/LOGGER.py", line 24
    print clr+''.join(HEADER)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GPyM/alien/TimeSeries.py'...
***   File "./lib/python3.5/site-packages/GPyM/alien/TimeSeries.py", line 46
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GPyM/alien/__init__.py'...
***   File "./lib/python3.5/site-packages/GPyM/alien/__init__.py", line 20
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GPyM/alien/collection.py'...
***   File "./lib/python3.5/site-packages/GPyM/alien/collection.py", line 49
    if verbose: print '\t!! Cached from %s'%cachePath
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GPyM/alien/read_hdf4.py'...
***   File "./lib/python3.5/site-packages/GPyM/alien/read_hdf4.py", line 37
    print '!'*80
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GPyM/alien/read_hdf5.py'...
***   File "./lib/python3.5/site-packages/GPyM/alien/read_hdf5.py", line 29
    print '!'*80
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GPyM/alien/unique_counts.py'...
***   File "./lib/python3.5/site-packages/GPyM/alien/unique_counts.py", line 10
    print aSrc
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GPyM/get_cache_dir.py'...
***   File "./lib/python3.5/site-packages/GPyM/get_cache_dir.py", line 18
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GPyM/get_dtime_gpm.py'...
***   File "./lib/python3.5/site-packages/GPyM/get_dtime_gpm.py", line 27
    raise ValueError, 'unknown hdf5 group [%s] for %s'%(h5Grp, srcPath)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GPyM/get_dtime_trmm.py'...
***   File "./lib/python3.5/site-packages/GPyM/get_dtime_trmm.py", line 49
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GPyM/get_gtrack_dim.py'...
***   File "./lib/python3.5/site-packages/GPyM/get_gtrack_dim.py", line 47
    print '+ Get Groundtrack Dimension: {}'.format( srcPath )
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GPyM/get_location_gpm.py'...
***   File "./lib/python3.5/site-packages/GPyM/get_location_gpm.py", line 26
    raise ValueError, 'unknown hdf5 group [%s] for %s'%(h5Grp, srcPath)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GPyM/get_location_trmm.py'...
***   File "./lib/python3.5/site-packages/GPyM/get_location_trmm.py", line 29
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GPyM/get_path.py'...
***   File "./lib/python3.5/site-packages/GPyM/get_path.py", line 32
    raise ValueError, '%s == %s'%(sDTime, eDTime)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GPyM/gpm.py'...
***   File "./lib/python3.5/site-packages/GPyM/gpm.py", line 75
    print self.func_read
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GPyM/granule2map.py'...
***   File "./lib/python3.5/site-packages/GPyM/granule2map.py", line 43
    print '\t[GRANULE2MAP] Domain:%s %s -> %s'%( BBox, aSrc.shape, aOut.shape)
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GPyM/search_granules.py'...
***   File "./lib/python3.5/site-packages/GPyM/search_granules.py", line 58
    print '* [V] ground track dimension (%s): %s'%(self.cached,path)
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/GPyM-0.60b0.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
